--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,10 @@ html{
   font-size: 62.5%;
 }
 
-
 body {
   margin: 0;
-  font-family:  300 11px/1.4 'Helvetica Neue', 'sans-serif';
+  /* font-family:  300 11px/1.4 'Helvetica Neue', 'sans-serif'; */
+  font-family: Helvetica, sans-serif;
   color: #444;
   background: #022c43;
   overflow: hidden;
