--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -20,7 +20,7 @@
     &::before{
       content: '<h1>';
       font-family: 'La Bella Aurore';
-      color: #ffd700;
+      color: #00FFA0;
       font-size: 18px;
       position: absolute;
       margin-top: -40px;
@@ -31,7 +31,7 @@
     &::after{
       content: '</h1>';
       font-family: 'La Bella Aurore';
-      color: #ffd700;
+      color: #00FFA0;
       font-size: 18px;
       position: absolute;
       margin-top: 18px;
@@ -61,13 +61,13 @@
   }
 
   .flat-button{
-    color: #ffd700;
+    color: #00FFA0;
     font-size: 13px;
     font-weight: 400;
     letter-spacing: 4px;
     font-family: sans-serif;
     text-decoration: none;
-    border: 1px solid #ffd700;
+    border: 1px solid #00FFA0;
     margin-top: 25px;
     float: left;
     padding: 10px 18px;
@@ -75,8 +75,8 @@
     white-space: nowrap;
 
     &:hover{
-      background: #ffd700;
-      color: #333;
+      background: #00FFA0;
+      color: #060520;
     }
 
   }
