--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -10,7 +10,7 @@
 }
 
 .tags{
-  color: #ffd700;
+  color: #00FFA0;
   opacity: 0.6;
   position: absolute;
   bottom: 0;
@@ -52,7 +52,7 @@
     h1{
       font-size: 53px;
       font-family: 'Coolvetica';
-      color: #ffd700;
+      color: #00FFA0;
       font-weight: 400;
       margin-top: 0;
       position: relative;
