--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -46,7 +46,7 @@
       }
 
       &:hover{
-        color: #FFD700;
+        color: #00FFA0;
 
         svg{
           opacity: 0;
@@ -91,7 +91,7 @@
 
     a.active{
       svg{
-        color: #FFD700;
+        color: #00FFA0;
       }
     }
   }
@@ -114,7 +114,7 @@
         line-height: 16px;
 
         &:hover svg{
-          color: #FFD700;
+          color: #00FFA0;
         }
       }
     }
