--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body {
   /* font: 300 11px/1.4 'Helvetica Neue', 'sans-serif'; */
   font-family: Helvetica, sans-serif;
   color: #444;
-  background: #022c43;
+  background: #060520;
   overflow: hidden;
   display: block;
   -webkit-font-smoothing: antialiased;
